# SCRUM_inpg

./: CMakeLists.txt  Klasa przechowujaca dane osob  README.md  _Classes__almost_done.hpp  _Functions_almost_done  _Tests_almost_done  class_person.hpp  dodawanie osoby  functions.cpp  main.cpp  terminal  testy_jednostkowe
include/: class_person.hpp
src/: functions.cpp
